# eel

./: CMakeLists.txt  README.md
.github/workflows/: release.yml  version_check.yml
include/eel/: contract.h  functional.h  interface.h  member.h  path.h  string_utils.h  type_list.h  type_traits.h  utility.h  wstringconv.h
release_pack/: CMakeLists.txt
tests/: CMakeLists.txt  test_functional.cpp  test_indirect_member.cpp  test_member.cpp  test_string.cpp  test_traits.cpp  test_type_list.cpp  test_utility.cpp
